merged up to 8661 ------ tests succeed, running is completely untested.  Have fun!